	--- 9.8.7rc1 released ---

3701.	[func]		named-checkconf can now suppress the printing of
			shared secrets by specifying '-x'. [RT #34465]

3698.	[cleanup]	Replaced all uses of memcpy() with memmove().
			[RT #35120]

3697.	[bug]		Handle "." as a search list element when IDN support
			is enabled. [RT #35133]

3696.	[bug]		dig failed to handle AXFR style IXFR responses which
			span multiple messages. [RT #35137]

3695.	[bug]		Address a possible race in dispatch.c. [RT #35107]

3694.	[bug]		Warn when a key-directory is configured for a zone,
			but does not exist or is not a directory. [RT #35108]

3693.	[security]	memcpy was incorrectly called with overlapping
			ranges resulting in malformed names being generated
			on some platforms.  This could cause INSIST failures
			when serving NSEC3 signed zones (CVE-2014-0591).
			[RT #35120]

3692.	[bug]		Two calls to dns_db_getoriginnode were fatal if there
			was no data at the node. [RT #35080]

3689.	[bug]		Fixed a bug causing an insecure delegation from one
			static-stub zone to another to fail with a broken
			trust chain. [RT #35081]

	--- 9.8.7b1 released ---

3688.	[bug]		loadnode could return a freed node on out of memory.
			[RT #35106]

3683.	[cleanup]	Add a more detailed "not found" message to rndc
			commands which specify a zone name. [RT #35059]

3681.	[port]		Update the Windows build system to support feature
			selection and WIN64 builds.  This is a work in
			progress. [RT #34160]

3679.	[bug]		dig could fail to clean up TCP sockets still
			waiting on connect(). [RT #35074]

3678.	[port]		Update config.guess and config.sub. [RT #35060]

3677.	[bug]		'nsupdate' leaked memory if 'realm' was used multiple
			times.  [RT #35073]

3676.	[bug]		"named-checkconf -z" now checks zones of type
			hint as well as master. [RT #35046]

3675.	[misc]		Provide a place for third parties to add version
			information for their extensions in the version
			file by setting the EXTENSIONS variable.
