@@ -1,3 +1,5 @@
+3704.	[protocol]	Accept integer timestamps in RRSIG records. [RT #35185]
+
 	--- 9.8.7rc1 released ---
 
 3701.	[func]		named-checkconf can now suppress the printing of
